--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,11 @@
     </parent>
 
     <groupId>org.jvnet.hudson.plugins</groupId>
-    <artifactId>hipchat</artifactId>
+    <artifactId>spark</artifactId>
     <packaging>hpi</packaging>
     <version>0.2.0-SNAPSHOT</version>
-    <name>Jenkins HipChat Plugin</name>
-    <description>A Build status publisher that notifies channels on a HipChat server</description>
-    <url>http://wiki.jenkins-ci.org/display/JENKINS/HipChat+Plugin</url>
-
+    <name>Jenkins Cisco Spark Plugin</name>
+    <description>A Build status publisher that notifies channels on a Cisco Spark server</description>
     <properties>
         <maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
         <powermock.version>1.6.1</powermock.version>
@@ -32,17 +30,10 @@
 
     <developers>
         <developer>
-            <id>aldaris</id>
-            <name>Peter Major</name>
+            <id>joewise</id>
+            <name>Joseph Wise</name>
         </developer>
     </developers>
-
-    <scm>
-        <connection>scm:git:ssh://github.com/jenkinsci/hipchat-plugin.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/jenkinsci/hipchat-plugin.git</developerConnection>
-        <url>https://github.com/jenkinsci/hipchat-plugin</url>
-      <tag>HEAD</tag>
-  </scm>
 
     <dependencyManagement>
         <dependencies>
