--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,13 @@
             <name>Joseph Wise</name>
         </developer>
     </developers>
-
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.cisco.dft.cd.spark.intg.service</groupId>
+                <artifactId>cd-spark-integration-service</artifactId>
+                <version>0.0.2</version>
+            </dependency>
             <dependency>
                 <groupId>commons-httpclient</groupId>
                 <artifactId>commons-httpclient</artifactId>
@@ -86,7 +90,6 @@
             <artifactId>powermock-api-mockito</artifactId>
         </dependency>
     </dependencies>
-
     <build>
         <pluginManagement>
             <plugins>
@@ -107,33 +110,40 @@
                     <configuration>
                         <systemPropertyVariables>
                           <java.util.logging.config.file>${project.build.directory}/test-classes/logging.properties</java.util.logging.config.file>
-                        </systemPropertyVariables>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-    <repositories>
-        <repository>
-            <id>repo.jenkins-ci.org</id>
-            <url>http://repo.jenkins-ci.org/public/</url>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>repo.jenkins-ci.org</id>
-            <url>http://repo.jenkins-ci.org/public/</url>
+                      </systemPropertyVariables>
+                  </configuration>
+              </plugin>
+          </plugins>
+      </pluginManagement>
+      <plugins>
+        <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.6</source>
+                <target>1.6</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+<repositories>
+    <repository>
+        <id>repo.jenkins-ci.org</id>
+        <url>http://repo.jenkins-ci.org/public/</url>
+    </repository>
+    <repository>
+        <id>central</id>
+        <name>Cisco Central Repository</name>
+        <url>http://repo-art.cisco.com/artifactory/repo</url>
+    </repository>
+</repositories>
+<pluginRepositories>
+    <pluginRepository>
+        <id>repo.jenkins-ci.org</id>
+        <url>http://repo.jenkins-ci.org/public/</url>
+    </pluginRepository>
+<!--         <pluginRepository>
+            <id>repo-art.cisco.com</id>
+            <url>http://repo-art.cisco.com/artifactory/repo</url>
         </pluginRepository>
-    </pluginRepositories>
+    -->    </pluginRepositories>
 </project>
