--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.jvnet.hudson.plugins</groupId>
     <artifactId>spark</artifactId>
     <packaging>hpi</packaging>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.2.1</version>
     <name>Jenkins Cisco Spark Plugin</name>
     <description>A Build status publisher that notifies channels on a Cisco Spark server</description>
     <properties>
@@ -65,14 +65,18 @@
                 <version>${powermock.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>com.cisco.dft.cd.spark.intg.service</groupId>
+                <artifactId>cd-spark-integration-service</artifactId>
+                <version>0.0.4</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
         <dependency>
-                <groupId>com.cisco.dft.cd.spark.intg.service</groupId>
-                <artifactId>cd-spark-integration-service</artifactId>
-                <version>0.0.1</version>
-            </dependency>
+            <groupId>com.cisco.dft.cd.spark.intg.service</groupId>
+            <artifactId>cd-spark-integration-service</artifactId>
+        </dependency>
         <dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
@@ -89,6 +93,11 @@
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-mockito</artifactId>
         </dependency>
+     <!--    <dependency>
+            <groupId>org.kohuske.stapler</groupId>
+            <artifactId>stapler</artifactId>
+            <version>1.234</version>
+        </dependency> -->
     </dependencies>
     <build>
         <pluginManagement>
@@ -128,7 +137,7 @@
 <repositories>
     <repository>
         <id>repo.jenkins-ci.org</id>
-        <url>http://repo.jenkins-ci.org/public/</url>
+        <url>repo.jenkins-ci.org/public/</url>
     </repository>
     <repository>
         <id>central</id>
@@ -139,11 +148,11 @@
 <pluginRepositories>
     <pluginRepository>
         <id>repo.jenkins-ci.org</id>
-        <url>http://repo.jenkins-ci.org/public/</url>
+        <url>repo.jenkins-ci.org/public/</url>
     </pluginRepository>
-        <pluginRepository>
-            <id>repo-art.cisco.com</id>
-            <url>http://repo-art.cisco.com/artifactory/repo</url>
-        </pluginRepository>
-       </pluginRepositories>
+    <pluginRepository>
+        <id>repo-art.cisco.com</id>
+        <url>http://repo-art.cisco.com/artifactory/repo</url>
+    </pluginRepository>
+</pluginRepositories>
 </project>
